frontendにdocker関連の追加

--- a/compose.yml
+++ b/compose.yml
@@ -4,9 +4,11 @@ services:
     working_dir: /frontend_app
     volumes:
       - ./frontend:/frontend_app
-      - frontend_app/node_modules
+      - /frontend_app/node_modules
     ports:
       - 5173:5173
+    command: npm run dev
+
   db:
     image: mysql:8.0
     environment:
@@ -19,6 +21,7 @@ services:
     ports:
       - '3306:3306'
     command: --default-authentication-plugin=mysql_native_password
+  
   backend:
     build: ./backend
     working_dir: /backend_app
