--- a/compose.yml
+++ b/compose.yml
@@ -24,10 +24,10 @@ services:
   
   backend:
     build: ./backend
-    working_dir: /backend_app
+    working_dir: /rails
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - ./backend:/backend_app
+      - ./backend:/rails
     ports:
       - 3000:3000
     stdin_open: true
