--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,8 @@ FROM node:18.18-alpine
 
 WORKDIR /frontend_app
 
-COPY package*.json ./
-# Viteのインストール
-# RUN npm install -g vite 
+# COPY package*.json ./
+COPY . .
 RUN npm i
 
 EXPOSE 5173
-
-COPY . .
