--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,10 @@ services:
     ports:
       - 5173:5173
     command: npm run dev
+    networks:
+      - app-network
+    environment:
+      - BACKEND_API_URL=http://backend:3000
 
   db:
     image: mysql:8.0
@@ -21,6 +25,8 @@ services:
     ports:
       - '3306:3306'
     command: --default-authentication-plugin=mysql_native_password
+    networks:
+      - app-network
   
   backend:
     build: ./backend
@@ -32,8 +38,16 @@ services:
       - 3000:3000
     stdin_open: true
     tty: true
+    networks:
+      - app-network
     depends_on:
       - db
 
 volumes:
   mysql_volume:
+
+# networkの作成
+networks:
+  app-network:
+    driver: bridge
+    external: true
