--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
