--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -20,6 +20,10 @@ gem "jbuilder"
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
+# lineでメッセージを送るため＋環境変数の読み込み
+gem 'line-bot-api'
+gem 'dotenv-rails'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug" #, platforms: %i[ mri windows ]
